--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,10 +36,11 @@ div.gallery img {
 				<li class="nav-item active"><a class="nav-link" href="/find">Find
 						Photos <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-				<li class="nav-item" sec:authorize="isAuthenticated()"><a
+				<li class="nav-item active"><a class="nav-link" href="/users">Users</a></li>
+				<li class="nav-item active"><a class="nav-link" href="/login">Login</a></li>
+				<li class="nav-item active" sec:authorize="isAuthenticated()"><a
 					class="nav-link" href="/logout">Logout</a></li>
-				<li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+				<li class="nav-item active"><a class="nav-link" href="/register">Register</a></li>
 			</ul>
 
 		</div>
